# gb28181-dev

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROJECT_CHECKLIST.md  README.md
.github/: COMMIT_SUMMARY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md
examples/: simple_push.cpp
include/: gb28181_dev.h
scripts/: build.sh  format.sh
src/core/: device.cpp  device_impl.cpp  device_impl.h
src/media/: media_processor.cpp  media_processor.h
src/rtp/: rtp_session.cpp  rtp_session.h
src/sip/: sip_stack.cpp  sip_stack.h
src/utils/: utils.cpp  utils.h
tests/: test_basic.cpp
